--- a/template.ipynb
+++ b/template.ipynb
@@ -6,7 +6,7 @@
       "name": "intro.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNgkipVJ0RVVpjEhNtv42aZ",
+      "authorship_tag": "ABX9TyNg/A30peAy4KrwsGxrtsuP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ks76oGv_wdte",
-        "outputId": "72f2e37f-021b-4659-ca3b-f79a1dd15ff2"
+        "outputId": "ecf40bfe-dc8c-42ff-9939-4848e3ba9720"
       },
       "source": [
         "print('hello world')"
@@ -50,6 +50,40 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Vm80Zmjb07AI",
+        "outputId": "9e9f53d2-a8cd-4a63-a9d2-2a3040a5ca72",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print('hello colab')"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "hello colab\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oLcDGifs0_y3"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
